--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -277,7 +277,7 @@ Page intro START -->
 						<ul class="list-inline mb-0">
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-star text-warning me-2"></i><span
-									th:text="${course.averageRating + '/5.0'}">4.5</span></span></li>
+									th:text="|${course.averageRating}/5.0|">4.5</span></span></li>
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-user-graduate text-orange me-2"></i><span
 									th:text="${course.totalStudentEnrolled() + ' Enrolled'}"></span></li>
