--- a/src/main/resources/templates/instructorDashboard/fragments/step1BasicInfor.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/step1BasicInfor.html
@@ -98,6 +98,11 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <!-- Bootstrap Icons -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
+  <!-- CKEditor CDN -->
+  <script src="https://cdn.ckeditor.com/4.22.1/standard/ckeditor.js"></script>
+  <script>
+    CKEDITOR.replace('courseDescription', { height: 200 });
+  </script>
   <style>
     body {
       min-height: 100vh;
