--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -293,10 +293,10 @@ Page intro START -->
 						<ul class="list-inline mb-0">
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-star text-warning me-2"></i><span
-									th:text="${course.averageRating + '/5.0'}">4.5</span></span></li>
+									>4.5</span></span></li>
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-user-graduate text-orange me-2"></i><span
-									th:text="${course.totalStudentEnrolled() + ' Enrolled'}"></span></li>
+									></span></li>
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-signal text-success me-2"></i> <span
 									th:text="${course.courseLevel}">All levels</span></li>
@@ -570,7 +570,7 @@ Page content START -->
 																		class="icon-md bg-info bg-opacity-10 text-info rounded-circle"><i
 																			class="fas fa-comment-dots"></i></span>
 																	<span class="h6 fw-light mb-0 ms-2"
-																		th:text="${course.getReviewCount()}">205</span>
+																		>205</span>
 																</div>
 															</li>
 														</ul>
@@ -1429,7 +1429,7 @@ Page content START -->
 													<span class="text-success"
 														th:text="${course.price} + ' ₫'">$130</span>
 													<span class="h6 fw-light"><span
-															th:text="${course.averageRating}"></span><i
+															></span><i
 															class="fas fa-star text-warning ms-1"></i></span>
 												</li>
 											</ul>
@@ -1520,7 +1520,7 @@ Listed courses START -->
 														<i class="fas fa-user-graduate"></i>
 													</div>
 													<span class="h6 fw-light ms-2 mb-0"
-														th:text="${course.totalStudentEnrolled}">
+													>
 
 													</span>
 												</li>
@@ -1532,7 +1532,7 @@ Listed courses START -->
 														<i class="fas fa-star"></i>
 													</div>
 													<span class="h6 fw-light ms-2 mb-0"
-														th:text="${course.averageRating}"></span>
+														></span>
 												</li>
 											</ul>
 											<!-- Avatar -->
