--- a/src/main/resources/templates/homePage/course-detail.html
+++ b/src/main/resources/templates/homePage/course-detail.html
@@ -277,10 +277,10 @@ Page intro START -->
 						<ul class="list-inline mb-0">
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-star text-warning me-2"></i><span
-									th:text="|${course.averageRating}/5.0|">4.5</span></span></li>
+									th:text="|${#numbers.formatDecimal(course.averageRating, 1, 'POINT', 1, 'POINT')}/5.0|">4.5</span></span></li>
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-user-graduate text-orange me-2"></i><span
-									th:text="${course.totalStudentEnrolled() + ' Enrolled'}"></span></li>
+									th:text="${course.getEnrollments().size() + ' Enrolled'}"></span></li>
 							<li class="list-inline-item h6 me-3 mb-1 mb-sm-0"><i
 									class="fas fa-signal text-success me-2"></i> <span
 									th:text="${course.courseLevel}">All levels</span></li>
@@ -433,7 +433,7 @@ Page content START -->
 										<!-- Accordion START -->
 										<div class="accordion accordion-icon accordion-bg-light" id="accordionExample2">
 
-											<div th:each="chapter, chapterStat : ${course.chapters}"
+											<div th:each="chapter, chapterStat : ${course.listOfChapters}"
 												class="accordion-item mb-3">
 												<h6 class="accordion-header font-base"
 													th:id="'heading-' + ${chapterStat.index}">
@@ -554,7 +554,7 @@ Page content START -->
 																		class="icon-md bg-info bg-opacity-10 text-info rounded-circle"><i
 																			class="fas fa-comment-dots"></i></span>
 																	<span class="h6 fw-light mb-0 ms-2"
-																		th:text="${course.getReviewCount()}">205</span>
+																		th:text="${course.courseReviews.size()}">205</span>
 																</div>
 															</li>
 														</ul>
@@ -1292,7 +1292,7 @@ Page content START -->
 											<!-- Price and time -->
 											<div>
 												<div class="d-flex align-items-center">
-													<h3 class="fw-bold mb-0 me-2" th:text="${course.price} + ' ₫'">$150
+													<h3 class="fw-bold mb-0 me-2" style="font-size: 1.5rem;" th:text="${course.price} + ' ₫'">$150
 													</h3>
 													<span class="text-decoration-line-through mb-0 me-2"
 														th:text="${course.price + course.price*0.6} + ' ₫'">$350</span>
@@ -1489,7 +1489,7 @@ Listed courses START -->
 														<i class="fas fa-user-graduate"></i>
 													</div>
 													<span class="h6 fw-light ms-2 mb-0"
-														th:text="${course.totalStudentEnrolled}">
+														th:text="${course.getEnrollments().size()}">
 
 													</span>
 												</li>
