--- a/src/main/resources/templates/homePage/fragments/cardCourse.html
+++ b/src/main/resources/templates/homePage/fragments/cardCourse.html
@@ -32,7 +32,7 @@
                                     class="text-warning"></i>
                             </li>
                             <li class="list-inline-item ms-2 h6 fw-light mb-0"
-                                th:text="${course.averageRating} + '/5.0'">4.0/5.0</li>
+                                th:text="|${#numbers.formatDecimal(course.averageRating, 1, 'POINT', 1, 'POINT')}/5.0|">4.0/5.0</li>
                         </ul>
                     </div>
                     <!-- Card footer -->
