Update Profile Instructor

--- a/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/sidebarUpdate.html
@@ -47,15 +47,12 @@
             <span>Orders & Payments</span>
           </a>
         </li>
-
-        <!-- Menu item 6 -->
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/instructordashboard}">
-            <i class="fas fa-fw fa-receipt"></i>
-            <span>CourseMaintenance</span>
+          <a class="nav-link" th:href="@{/instructordashboard/profile}">
+            <i class="fas fa-fw fa-user"></i>
+            <span>Profile</span>
           </a>
         </li>
-
 
       </ul>
       <!-- Sidebar menu end -->
