--- a/src/main/resources/templates/email/account-status.html
+++ b/src/main/resources/templates/email/account-status.html
@@ -117,7 +117,7 @@
         </p>
 
         <div th:if="${isLocked}" style="text-align: center;">
-            <a href="mailto:support@olearning.com" class="button">LIÊN HỆ HỖ TRỢ</a>
+            <a href="mailto:olearningwebsite@gmail.com" class="button">LIÊN HỆ HỖ TRỢ</a>
         </div>
 
         <p style="margin-top: 30px;">Trân trọng,<br><strong>Đội ngũ OLearning</strong></p>
@@ -127,7 +127,7 @@
         <p>© 2025 OLearning. All rights reserved.</p>
         <p>
             Đây là email tự động. Vui lòng không phản hồi lại. Nếu bạn không thực hiện hành động này, hãy
-            <a href="mailto:security@olearning.com">báo cáo với chúng tôi</a>.
+            <a href="mailto:olearningwebsite@gmail.com">báo cáo với chúng tôi</a>.
         </p>
     </div>
 
