--- a/src/main/resources/templates/instructorDashboard/fragments/topbar.html
+++ b/src/main/resources/templates/instructorDashboard/fragments/topbar.html
@@ -200,7 +200,7 @@
                                 <hr class="dropdown-divider">
                             </li>
                             <!-- Links -->
-                            <li><a class="dropdown-item" href="#"><i class="bi bi-person fa-fw me-2"></i>Edit
+                            <li><a class="dropdown-item" th:href="@{/profile/edit}"><i class="bi bi-person fa-fw me-2"></i>Edit
                                 Profile</a></li>
                             <li><a class="dropdown-item" href="#"><i class="bi bi-gear fa-fw me-2"></i>Account Settings</a>
                             </li>
